@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T16:29:14Z",
-  "count_outdated" : 1818,
-  "uniques_outdated" : 358,
-  "count" : 1867,
-  "uniques" : 389,
+  "timestamp" : "2022-05-10T01:16:51Z",
+  "count_outdated" : 1819,
+  "uniques_outdated" : 359,
+  "count" : 2087,
+  "uniques" : 390,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-26T00:00:00Z",
       "count": 6,
@@ -84,10 +77,10 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 221,
+      "count_minmax": [ 0, 221 ],
+      "uniques": 2,
+      "uniques_minmax": [ 0, 2 ]
     }
   ]
 }
