@@ -1,12 +1,7 @@
 {
-  "count": 49,
-  "uniques": 15,
+  "count": 268,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-26T00:00:00Z",
       "count": 6,
@@ -59,8 +54,8 @@
     },
     {
       "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 221,
+      "uniques": 2
     }
   ]
 }
